--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -321,36 +321,36 @@
 **** window and file history
 
      #+BEGIN_SRC emacs-lisp
-              ;; C-c LEFT to undo window change, which i need often
-              (use-package winner
-                :init (winner-mode 1))
+       ;; C-c LEFT to undo window change, which i need often
+       (use-package winner
+         :init (winner-mode 1))
 
-              (use-package workgroups
-                :config
-                (workgroups-mode 1)
-                (setq wg-prefix-key (kbd "C-c w"))
-                (wg-load "~/.emacs.d/saved-workgroups")
-                (setq wg-switch-on-load nil))
+       (use-package workgroups)
+       (workgroups-mode 1)
+       (setq wg-prefix-key (kbd "C-c w"))
+       (setq wg-switch-on-load nil)
+       (setq wg-file "~/.workgroups")
 
-              ;; re-opens file at last place edited
-              (use-package saveplace
-                :defer t
-                :init
-                (setq-default save-place t)
-                (setq save-place-file (expand-file-name ".places" user-emacs-directory)))
 
-              ;; enables recent-files to be re-opened
-              (recentf-mode 1)
-              (setq recentf-max-menu-items 50)
+       ;; re-opens file at last place edited
+       (use-package saveplace
+         :defer t
+         :init
+         (setq-default save-place t)
+         (setq save-place-file (expand-file-name ".places" user-emacs-directory)))
 
-              ;; do not need spam in recents list
-              (setq recentf-exclude '("/auto-install/" ".recentf" "/repos/" "/elpa/"
-                                      "\\.mime-example" "\\.ido.last" "COMMIT_EDITMSG"
-                                      ".gz"
-                                      "~$" "/tmp/" "/ssh:" "/sudo:" "/scp:"))
-              (global-set-key "\C-x\ \C-r" 'recentf-open-files)
+       ;; enables recent-files to be re-opened
+       (recentf-mode 1)
+       (setq recentf-max-menu-items 50)
 
-              ;;(desktop-save-mode 1)
+       ;; do not need spam in recents list
+       (setq recentf-exclude '("/auto-install/" ".recentf" "/repos/" "/elpa/"
+                               "\\.mime-example" "\\.ido.last" "COMMIT_EDITMSG"
+                               ".gz"
+                               "~$" "/tmp/" "/ssh:" "/sudo:" "/scp:"))
+       (global-set-key "\C-x\ \C-r" 'recentf-open-files)
+
+       ;;(desktop-save-mode 1)
      #+END_SRC
 **** projectile
 
