ADDED FIRA CODE LIGATURES 🎉 and pdf tools

--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -102,7 +102,7 @@
                 which-key ivy swiper counsel fill-column-indicator volatile-highlights
                 golden-ratio undo-tree ace-window paredit projectile counsel-projectile diminish rainbow-delimiters
                 smartparens ggtags expand-region ag neotree keychain-environment workgroups multiple-cursors
-                dimmer
+                dimmer pdf-tools
                 ;;bookmarks+ dired+ no longer on melpa 
 
                 ;; TODO actually config this up so I have a more spacemacs-like navigation experience
@@ -158,7 +158,7 @@
                 org-bullets org-pomodoro org-download htmlize org-journal
 
                 ;; themes
-                challenger-deep-theme exotica-theme seti-theme gandalf-theme cyberpunk-theme dark-mint-theme dracula-theme
+                challenger-deep-theme exotica-theme seti-theme gandalf-theme cyberpunk-theme dark-mint-theme dracula-theme material-theme
 
                 ;; other
                 writeroom-mode minimap gnuplot csv-mode mips-mode smart-mode-line fireplace anki-editor emojify
@@ -176,7 +176,143 @@
 *** general settings
 
     things that don't seem to go anywhere because of their generality or edge-case nature:
+**** FONTS
+     - fira code, etc, do not work with ligatures. i don't know how people get
+       it to work. :(
+       #+BEGIN_SRC emacs-lisp
+         ;;; Fira code
+         ;; This works when using emacs --daemon + emacsclient
+         (add-hook 'after-make-frame-functions (lambda (frame) (set-fontset-font t '(#Xe100 . #Xe16f) "Fira Code Symbol")))
+         ;; This works when using emacs without server/client
+         (set-fontset-font t '(#Xe100 . #Xe16f) "Fira Code Symbol")
+         ;; I haven't found one statement that makes both of the above situations work, so I use both for now
 
+         (defconst fira-code-font-lock-keywords-alist
+           (mapcar (lambda (regex-char-pair)
+                     `(,(car regex-char-pair)
+                       (0 (prog1 ()
+                            (compose-region (match-beginning 1)
+                                            (match-end 1)
+                                            ;; The first argument to concat is a string containing a literal tab
+                                            ,(concat "	" (list (decode-char 'ucs (cadr regex-char-pair)))))))))
+                   '(("\\(www\\)"                   #Xe100)
+                     ("[^/]\\(\\*\\*\\)[^/]"        #Xe101)
+                     ("\\(\\*\\*\\*\\)"             #Xe102)
+                     ("\\(\\*\\*/\\)"               #Xe103)
+                     ("\\(\\*>\\)"                  #Xe104)
+                     ("[^*]\\(\\*/\\)"              #Xe105)
+                     ("\\(\\\\\\\\\\)"              #Xe106)
+                     ("\\(\\\\\\\\\\\\\\)"          #Xe107)
+                     ("\\({-\\)"                    #Xe108)
+                     ("\\(\\[\\]\\)"                #Xe109)
+                     ("\\(::\\)"                    #Xe10a)
+                     ("\\(:::\\)"                   #Xe10b)
+                     ("[^=]\\(:=\\)"                #Xe10c)
+                     ("\\(!!\\)"                    #Xe10d)
+                     ("\\(!=\\)"                    #Xe10e)
+                     ("\\(!==\\)"                   #Xe10f)
+                     ("\\(-}\\)"                    #Xe110)
+                     ("\\(--\\)"                    #Xe111)
+                     ("\\(---\\)"                   #Xe112)
+                     ("\\(-->\\)"                   #Xe113)
+                     ("[^-]\\(->\\)"                #Xe114)
+                     ("\\(->>\\)"                   #Xe115)
+                     ("\\(-<\\)"                    #Xe116)
+                     ("\\(-<<\\)"                   #Xe117)
+                     ("\\(-~\\)"                    #Xe118)
+                     ("\\(#{\\)"                    #Xe119)
+                     ("\\(#\\[\\)"                  #Xe11a)
+                     ("\\(##\\)"                    #Xe11b)
+                     ("\\(###\\)"                   #Xe11c)
+                     ("\\(####\\)"                  #Xe11d)
+                     ("\\(#(\\)"                    #Xe11e)
+                     ("\\(#\\?\\)"                  #Xe11f)
+                     ("\\(#_\\)"                    #Xe120)
+                     ("\\(#_(\\)"                   #Xe121)
+                     ("\\(\\.-\\)"                  #Xe122)
+                     ("\\(\\.=\\)"                  #Xe123)
+                     ("\\(\\.\\.\\)"                #Xe124)
+                     ("\\(\\.\\.<\\)"               #Xe125)
+                     ("\\(\\.\\.\\.\\)"             #Xe126)
+                     ("\\(\\?=\\)"                  #Xe127)
+                     ("\\(\\?\\?\\)"                #Xe128)
+                     ("\\(;;\\)"                    #Xe129)
+                     ("\\(/\\*\\)"                  #Xe12a)
+                     ("\\(/\\*\\*\\)"               #Xe12b)
+                     ("\\(/=\\)"                    #Xe12c)
+                     ("\\(/==\\)"                   #Xe12d)
+                     ("\\(/>\\)"                    #Xe12e)
+                     ("\\(//\\)"                    #Xe12f)
+                     ("\\(///\\)"                   #Xe130)
+                     ("\\(&&\\)"                    #Xe131)
+                     ("\\(||\\)"                    #Xe132)
+                     ("\\(||=\\)"                   #Xe133)
+                     ("[^|]\\(|=\\)"                #Xe134)
+                     ("\\(|>\\)"                    #Xe135)
+                     ("\\(\\^=\\)"                  #Xe136)
+                     ("\\(\\$>\\)"                  #Xe137)
+                     ("\\(\\+\\+\\)"                #Xe138)
+                     ("\\(\\+\\+\\+\\)"             #Xe139)
+                     ("\\(\\+>\\)"                  #Xe13a)
+                     ("\\(=:=\\)"                   #Xe13b)
+                     ("[^!/]\\(==\\)[^>]"           #Xe13c)
+                     ("\\(===\\)"                   #Xe13d)
+                     ("\\(==>\\)"                   #Xe13e)
+                     ("[^=]\\(=>\\)"                #Xe13f)
+                     ("\\(=>>\\)"                   #Xe140)
+                     ("\\(<=\\)"                    #Xe141)
+                     ("\\(=<<\\)"                   #Xe142)
+                     ("\\(=/=\\)"                   #Xe143)
+                     ("\\(>-\\)"                    #Xe144)
+                     ("\\(>=\\)"                    #Xe145)
+                     ("\\(>=>\\)"                   #Xe146)
+                     ("[^-=]\\(>>\\)"               #Xe147)
+                     ("\\(>>-\\)"                   #Xe148)
+                     ("\\(>>=\\)"                   #Xe149)
+                     ("\\(>>>\\)"                   #Xe14a)
+                     ("\\(<\\*\\)"                  #Xe14b)
+                     ("\\(<\\*>\\)"                 #Xe14c)
+                     ("\\(<|\\)"                    #Xe14d)
+                     ("\\(<|>\\)"                   #Xe14e)
+                     ("\\(<\\$\\)"                  #Xe14f)
+                     ("\\(<\\$>\\)"                 #Xe150)
+                     ("\\(<!--\\)"                  #Xe151)
+                     ("\\(<-\\)"                    #Xe152)
+                     ("\\(<--\\)"                   #Xe153)
+                     ("\\(<->\\)"                   #Xe154)
+                     ("\\(<\\+\\)"                  #Xe155)
+                     ("\\(<\\+>\\)"                 #Xe156)
+                     ("\\(<=\\)"                    #Xe157)
+                     ("\\(<==\\)"                   #Xe158)
+                     ("\\(<=>\\)"                   #Xe159)
+                     ("\\(<=<\\)"                   #Xe15a)
+                     ("\\(<>\\)"                    #Xe15b)
+                     ("[^-=]\\(<<\\)"               #Xe15c)
+                     ("\\(<<-\\)"                   #Xe15d)
+                     ("\\(<<=\\)"                   #Xe15e)
+                     ("\\(<<<\\)"                   #Xe15f)
+                     ("\\(<~\\)"                    #Xe160)
+                     ("\\(<~~\\)"                   #Xe161)
+                     ("\\(</\\)"                    #Xe162)
+                     ("\\(</>\\)"                   #Xe163)
+                     ("\\(~@\\)"                    #Xe164)
+                     ("\\(~-\\)"                    #Xe165)
+                     ("\\(~=\\)"                    #Xe166)
+                     ("\\(~>\\)"                    #Xe167)
+                     ("[^<]\\(~~\\)"                #Xe168)
+                     ("\\(~~>\\)"                   #Xe169)
+                     ("\\(%%\\)"                    #Xe16a)
+                    ;; ("\\(x\\)"                   #Xe16b) This ended up being hard to do properly so i'm leaving it out.
+                     ("[^:=]\\(:\\)[^:=]"           #Xe16c)
+                     ("[^\\+<>]\\(\\+\\)[^\\+<>]"   #Xe16d)
+                     ("[^\\*/<>]\\(\\*\\)[^\\*/<>]" #Xe16f))))
+
+         (defun add-fira-code-symbol-keywords ()
+           (font-lock-add-keywords nil fira-code-font-lock-keywords-alist))
+
+         (add-hook 'prog-mode-hook
+                   #'add-fira-code-symbol-keywords)
+       #+END_SRC
 **** system defaults
      
     #+BEGIN_SRC emacs-lisp
@@ -195,11 +331,12 @@
       (menu-bar-mode 1)
 
       ;; UTF-8 is our friend in a world of shitty programming standards
+      (set-language-environment "UTF-8")
       (prefer-coding-system 'utf-8)
-      (set-default-coding-systems 'utf-8)
-      (set-terminal-coding-system 'utf-8)
-      (set-keyboard-coding-system 'utf-8)
-      (setq default-buffer-file-coding-system 'utf-8)
+      ;;(set-default-coding-systems 'utf-8)
+      ;;(set-terminal-coding-system 'utf-8)
+      ;;(set-keyboard-coding-system 'utf-8)
+      ;;(setq default-buffer-file-coding-system 'utf-8)
 
       ;; speaking of text, unify emacs clipboard with linux
       (setq x-select-enable-clipboard t)
@@ -264,7 +401,6 @@
             (list (format "%s %%S: %%j " (system-name))
                   '(buffer-file-name "%f" (dired-directory dired-directory "%b"))))
     #+END_SRC
-
 **** which-key and general.el
      Which-key is a very nice minor-mode that essentially gives a preview of
      all possible key completions available based on the current key stroke,
@@ -309,15 +445,24 @@
 
        ;; for dark: seti; for light: gandalf
        ;; when i feel like a hacker: cyberpunk or dark-mint
-       (load-theme 'challenger-deep t)
+       ;; 'challenger-deep
+       (load-theme 'gandalf t)
 
-       ;; pretty symboles
+       ;; pretty symbols
        (prettify-symbols-mode t)
        (setq-default prettify-symbols-alist '(("lambda" . ?λ)
+                                              (".\\" . ?λ)
+                                              ("->" . ?⟶)
+                                              ("=/=" . ?≠)
+                                              ("===" . ?≡)
+                                              ("!=" . ?≠)
+                                              ("<=" . ?≤)
+                                              (">=" . ?≥)
                                               ("delta" . ?Δ)
                                               ("gamma" . ?Γ)
                                               ("phi" . ?φ)
-                                              ("psi" . ?ψ)))
+                                              ("psi" . ?ψ)
+                                              ))
        ;; dims the buffers that are not active
        (use-package dimmer)
        (dimmer-mode)
@@ -515,6 +660,13 @@
 
        (advice-add 'kill-ring-save :before #'slick-copy)
      #+END_SRC
+**** PDF
+     - basic settings for how i want my pdf's handled. I use pdf-view
+       (pdf-tools), which gives way better resolution, performance, and also
+       even annotation logic!
+       #+BEGIN_SRC emacs-lisp
+          (add-to-list 'auto-mode-alist '("\\.pdf\\'" . pdf-view-mode))
+       #+END_SRC
 *** completion
 
     #+BEGIN_SRC emacs-lisp
